change some motor settings

--- a/Marlin/config.ini
+++ b/Marlin/config.ini
@@ -49,10 +49,10 @@ default_kp                               = 22.20
 default_ki                               = 1.08
 default_kd                               = 114.00
 
-x_driver_type                            = A4988
-y_driver_type                            = A4988
-z_driver_type                            = A4988
-e0_driver_type                           = A4988
+x_driver_type                            = TMC2209
+y_driver_type                            = TMC2209
+z_driver_type                            = TMC2209
+e0_driver_type                           = TMC2209
 
 x_bed_size                               = 200
 x_min_pos                                = 0
@@ -73,7 +73,7 @@ x_min_endstop_hit_state                  = HIGH
 y_min_endstop_hit_state                  = HIGH
 z_min_endstop_hit_state                  = HIGH
 
-default_axis_steps_per_unit              = { 80, 80, 400, 500 }
+default_axis_steps_per_unit              = { 100, 100, 400, 140 }
 axis_relative_modes                      = { false, false, false, false }
 default_max_feedrate                     = { 300, 300, 5, 25 }
 default_max_acceleration                 = { 3000, 3000, 100, 10000 }
